fix channel menu overflow

--- a/src/app/channels-menu/channels-menu.component.scss
+++ b/src/app/channels-menu/channels-menu.component.scss
@@ -4,6 +4,7 @@
     background-color: #19171D;
     width: 20%;
     border-right: 1px solid rgba(255, 255, 255, 0.2);
+    overflow-y: auto;
 }
 
 header {
